[gd_scene load_steps=14 format=3 uid="uid://cpq1itmwil4uo"]

[ext_resource type="Script" uid="uid://bcfwm6l6pxi22" path="res://UI/TopBarPanel.gd" id="1_wwh41"]
[ext_resource type="PackedScene" uid="uid://c6mdogwl6v5bj" path="res://UI/UpgradeRowTemplate.tscn" id="1_xv1u1"]
[ext_resource type="PackedScene" uid="uid://d0r1cd0b6civr" path="res://DepthBarsPanel.tscn" id="3_8cqdv"]
[ext_resource type="Script" uid="uid://dvsigcuu8oc5e" path="res://UI/TopPanelsHUD.gd" id="3_uqb74"]
[ext_resource type="Script" uid="uid://bx5tb3yptow3u" path="res://UI/RightRail.gd" id="3_wa2eh"]
[ext_resource type="Script" uid="uid://d3q5yx0qmqjnk" path="res://scripts/ui/SettingsPanel.gd" id="4_8cqdv"]
[ext_resource type="Script" uid="uid://v3ke4fh6l5g8" path="res://UI/ShopPanel.gd" id="5_44ib0"]
[ext_resource type="Texture2D" uid="uid://cgc4eaq0mkd4k" path="res://UI/BG/BG1.png" id="8_uqb74"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xv1u1"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.05490196, 0.0627451, 0.1254902, 0.8509804)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.22745098, 0.24705882, 0.41568628, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wa2eh"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.043137256, 0.050980393, 0.10980392, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fdbdo"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(18.892, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbue8"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.05490196, 0.0627451, 0.1254902, 0.8509804)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.22745098, 0.24705882, 0.41568628, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwh41"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.05490196, 0.0627451, 0.1254902, 0.8509804)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.22745098, 0.24705882, 0.41568628, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 5

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 24.0
offset_right = -32.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Root" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBarPanel" type="PanelContainer" parent="Root"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -460.0
offset_top = 20.0
offset_right = 460.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xv1u1")
script = ExtResource("1_wwh41")

[node name="TopBar" type="HBoxContainer" parent="Root/TopBarPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MarginContainer" type="MarginContainer" parent="Root/TopBarPanel/TopBar"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("3_uqb74")

[node name="ThoughtsBox" type="HBoxContainer" parent="Root/TopBarPanel/TopBar/MarginContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="ThoughtsTitle" type="Label" parent="Root/TopBarPanel/TopBar/MarginContainer/ThoughtsBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.9019608, 1, 1)
text = "Thoughts"

[node name="ThoughtsValue" type="Label" parent="Root/TopBarPanel/TopBar/MarginContainer/ThoughtsBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.9019608, 1, 1)
theme_override_font_sizes/font_size = 20
text = "0"

[node name="ThoughtsGain" type="Label" parent="Root/TopBarPanel/TopBar/MarginContainer/ThoughtsBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.9019608, 1, 1)
text = "+0/s"

[node name="InstabilityCenter" type="CenterContainer" parent="Root/TopBarPanel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InstabilityVBox" type="VBoxContainer" parent="Root/TopBarPanel/TopBar/InstabilityCenter"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="InstabilityTitle" type="Label" parent="Root/TopBarPanel/TopBar/InstabilityCenter/InstabilityVBox"]
layout_mode = 2
text = "Instability"
horizontal_alignment = 1

[node name="InstabilityBar" type="ProgressBar" parent="Root/TopBarPanel/TopBar/InstabilityCenter/InstabilityVBox"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Instability"
theme_override_styles/background = SubResource("StyleBoxFlat_wa2eh")
theme_override_styles/fill = SubResource("StyleBoxFlat_fdbdo")

[node name="InstabilityHint" type="Label" parent="Root/TopBarPanel/TopBar/InstabilityCenter/InstabilityVBox"]
visible = false
layout_mode = 2
text = "Consider Wake"

[node name="ControlPad" type="MarginContainer" parent="Root/TopBarPanel/TopBar"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ControlBox" type="HBoxContainer" parent="Root/TopBarPanel/TopBar/ControlPad"]
layout_mode = 2
alignment = 2

[node name="ControlTitle" type="Label" parent="Root/TopBarPanel/TopBar/ControlPad/ControlBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.9019608, 1, 1)
text = "Control"

[node name="ControlValue" type="Label" parent="Root/TopBarPanel/TopBar/ControlPad/ControlBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.9019608, 1, 1)
theme_override_font_sizes/font_size = 20
text = "0"

[node name="ControlGain" type="Label" parent="Root/TopBarPanel/TopBar/ControlPad/ControlBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.9019608, 1, 1)
text = "+0/s"

[node name="LeftPanel" type="PanelContainer" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 180.0
offset_right = 500.0
offset_bottom = -480.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dbue8")

[node name="LeftVBox" type="VBoxContainer" parent="Root/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="UpgradesTitle" type="Label" parent="Root/LeftPanel/LeftVBox"]
layout_mode = 2
text = "Upgrades"

[node name="UpgradesScroll" type="ScrollContainer" parent="Root/LeftPanel/LeftVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UpgradeList" type="VBoxContainer" parent="Root/LeftPanel/LeftVBox/UpgradesScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ThoughtsRow" parent="Root/LeftPanel/LeftVBox/UpgradesScroll/UpgradeList" instance=ExtResource("1_xv1u1")]
layout_mode = 2

[node name="StabilityRow" parent="Root/LeftPanel/LeftVBox/UpgradesScroll/UpgradeList" instance=ExtResource("1_xv1u1")]
layout_mode = 2
mode = "stability"

[node name="DeepDivesRow" parent="Root/LeftPanel/LeftVBox/UpgradesScroll/UpgradeList" instance=ExtResource("1_xv1u1")]
layout_mode = 2
mode = "deepdives"

[node name="MentalBufferRow" parent="Root/LeftPanel/LeftVBox/UpgradesScroll/UpgradeList" instance=ExtResource("1_xv1u1")]
layout_mode = 2
mode = "mentalbuffer"

[node name="OverclockMasteryRow" parent="Root/LeftPanel/LeftVBox/UpgradesScroll/UpgradeList" instance=ExtResource("1_xv1u1")]
layout_mode = 2
mode = "overclockmastery"

[node name="OverclockSafetyRow" parent="Root/LeftPanel/LeftVBox/UpgradesScroll/UpgradeList" instance=ExtResource("1_xv1u1")]
layout_mode = 2
mode = "overclocksafety"

[node name="DepthBarCenter" type="CenterContainer" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DepthBarsPanel" parent="Root/DepthBarCenter" instance=ExtResource("3_8cqdv")]
layout_mode = 2

[node name="BottomBarPanel" type="PanelContainer" parent="Root"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -520.0
offset_top = -80.0
offset_right = 520.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wwh41")

[node name="BottomBar" type="HBoxContainer" parent="Root/BottomBarPanel"]
layout_mode = 2

[node name="OverclockButton" type="Button" parent="Root/BottomBarPanel/BottomBar"]
custom_minimum_size = Vector2(220, 54)
layout_mode = 2
text = "Overclock"

[node name="WakeButton" type="Button" parent="Root/BottomBarPanel/BottomBar"]
visible = false
custom_minimum_size = Vector2(220, 54)
layout_mode = 2
text = "Wake"

[node name="Meta" type="Button" parent="Root/BottomBarPanel/BottomBar"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Depth  â†’"

[node name="AutoToggles" type="HBoxContainer" parent="Root"]
visible = false
layout_mode = 0
offset_top = 112.0
offset_right = 696.0
offset_bottom = 143.0

[node name="AutoDiveToggle" type="CheckButton" parent="Root/AutoToggles"]
layout_mode = 2
text = "Auto Dive"

[node name="AutoOverclockToggle" type="CheckButton" parent="Root/AutoToggles"]
layout_mode = 2
text = "Auto Overclock"

[node name="RightRail" type="PanelContainer" parent="Root"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_wa2eh")
settings_panel_path = NodePath("../SettingsPanel")
shop_panel_path = NodePath("../ShopPanel")

[node name="VBoxContainer" type="VBoxContainer" parent="Root/RightRail"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="Root/RightRail/VBoxContainer"]
custom_minimum_size = Vector2(140, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="ShopButton" type="Button" parent="Root/RightRail/VBoxContainer"]
custom_minimum_size = Vector2(140, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="SettingsPanel" type="PanelContainer" parent="Root"]
visible = false
z_index = 50
custom_minimum_size = Vector2(520, 360)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_8cqdv")

[node name="Backdrop" type="ColorRect" parent="Root/SettingsPanel"]
layout_mode = 2

[node name="Root" type="VBoxContainer" parent="Root/SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Root/SettingsPanel/Root"]
layout_mode = 2

[node name="Mute" type="CheckButton" parent="Root/SettingsPanel/Root"]
layout_mode = 2
text = "Mute"

[node name="VolumeLabel" type="Label" parent="Root/SettingsPanel/Root"]
layout_mode = 2

[node name="Volume" type="HSlider" parent="Root/SettingsPanel/Root"]
layout_mode = 2

[node name="Actions" type="HBoxContainer" parent="Root/SettingsPanel/Root"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="Root/SettingsPanel/Root/Actions"]
layout_mode = 2

[node name="LoadButton" type="Button" parent="Root/SettingsPanel/Root/Actions"]
layout_mode = 2

[node name="StatsButton" type="Button" parent="Root/SettingsPanel/Root/Actions"]
layout_mode = 2

[node name="StatsBox" type="VBoxContainer" parent="Root/SettingsPanel/Root"]
visible = false
layout_mode = 2

[node name="StatsTabs" type="HBoxContainer" parent="Root/SettingsPanel/Root/StatsBox"]
layout_mode = 2

[node name="RunTabButton" type="Button" parent="Root/SettingsPanel/Root/StatsBox/StatsTabs"]
layout_mode = 2

[node name="LifetimeTabButton" type="Button" parent="Root/SettingsPanel/Root/StatsBox/StatsTabs"]
layout_mode = 2

[node name="StatLines" type="VBoxContainer" parent="Root/SettingsPanel/Root/StatsBox"]
layout_mode = 2

[node name="Line1" type="Label" parent="Root/SettingsPanel/Root/StatsBox/StatLines"]
layout_mode = 2

[node name="Line2" type="Label" parent="Root/SettingsPanel/Root/StatsBox/StatLines"]
layout_mode = 2

[node name="Line3" type="Label" parent="Root/SettingsPanel/Root/StatsBox/StatLines"]
layout_mode = 2

[node name="Line4" type="Label" parent="Root/SettingsPanel/Root/StatsBox/StatLines"]
layout_mode = 2

[node name="Line5" type="Label" parent="Root/SettingsPanel/Root/StatsBox/StatLines"]
layout_mode = 2

[node name="Line6" type="Label" parent="Root/SettingsPanel/Root/StatsBox/StatLines"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Root/SettingsPanel/Root"]
layout_mode = 2

[node name="ShopPanel" type="PanelContainer" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_44ib0")

[node name="BG" type="CanvasLayer" parent="."]
layer = -100

[node name="Background" type="TextureRect" parent="BG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_uqb74")
expand_mode = 1
